# Scholar-AI

./: .gitignore  CLAUDE.md  README.md  debug_pdf.py  debug_table.py  force_reindex.py  patch_utils.js  pyproject.toml  reindex_all.py  scholar.key  setup.ps1  setup.sh  start.ps1  start.sh  test.html  test2.html  test_lancedb.py  test_rect.py  update.ps1  update.sh
.github/workflows/: release.yml
.opencode/plans/: 2026-07-01-paper-ui-install-plan.md  batch-document-uploads.md
apps/storybook/: .gitignore  package-lock.json  package.json  tsconfig.json
config/: default.toml
context/: api_endpoints_context.md  backend-context.md  frontend_context.md
docs/plans/: 2026-07-04-packaging-design.md
frontend/: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  test-render.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: README.md
frontend/scripts/: create-barrel.mjs  (+1 more)
paper-ui/: UI_LIB.md  eslint.config.mjs  node_modules  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
reports/: api_endpoints.md  exam_mode.md  frontend_backend_implementation.md  persistence_of_artifacts.md  pyq_ingestion_and_generation.md  rag_pipeline.md  saving_generated_artifacts.md
scholarai/: __init__.py  cli.py  config.py
scholarcli/: __init__.py  cli.py  config.py
tests/: conftest.py  debug_heading.py  factories.py  fix_getters.py  fix_imports.py  fix_imports2.py  fix_routers.py  force_reindex.py  patch_documents.py  patch_library_flashcards.py  rebuild_fts.py  reindex_all.py  test_auto_save.py  test_chunker.py  test_config.py  test_doc_relations.py  test_drawings.py  test_encryption.py  test_extraction.py  test_lancedb.py  test_lifespan.py  test_missing_features.py  test_multihop.py  test_notebook_bs_snapshot.py  test_ocr_optimizations.py  test_page_cache.py  test_pipeline.py  test_pymupdf.py  test_pyq_edit.py  test_pyq_ocr.py  test_quality.py  test_reading_notes.py  test_retrieval.py  test_topic_prioritization.py  tests.py  update_fetch.py  update_search.py  update_warmup.py
(+1549 files in other folders)
