[project]
name = "scholarcli"
version = "0.1.0"
description = "Terminal-first, local-first AI study assistant (RAG over your documents)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.2",
    "lancedb>=0.13",
    "pyarrow>=17",
    "pymupdf>=1.24",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "rich>=13",
    "textual>=0.80",
    "textual-image>=0.3.0",
    "Pillow>=10.0.0",
    "pydantic>=2.7",
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
]

[project.scripts]
scholar = "scholarcli.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scholarcli"]
