[project]
name = "scholarai"
version = "0.1.0"
description = "Local-first AI study assistant "
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cryptography>=42.0",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.2",
    "lancedb>=0.13",
    "pyarrow>=17",
    "pymupdf>=1.24",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.7",
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
    "pymupdf-layout>=1.27.2.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
ocr = ["pytesseract"]
cloud = [
    "langchain-google-genai>=2.0",
    "langchain-groq>=0.2",
    "langchain-openai>=0.2",
]

[project.scripts]
scholar = "scholarai.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "tenacity>=9",
]

[tool.pytest.ini_options]
markers = [
    "ollama: tests that require a running Ollama server",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scholarai"]
